--- a/index.html
+++ b/index.html
@@ -2,9 +2,33 @@
     <head>
         <meta charset="UTF-8">
         <title>My portfolio</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
-        <p>Test</p>
+        <div class="top-bar">
+            <p>My personal portfolio</p>
+        </div>
+        <div class="middle">
+            <div class="left">
+                <h1>Martim Gouveia</h1>
+                <div></div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+            <div class="right">
+                <h1>Skills</h1>
+                <div></div>
+                <p>Java</p>
+                <p>Javascript</p>
+                <p>C</p>
+                <p>HTML</p>
+                <p>CSS</p>
+                <p>OCaml</p>
+                <p>Google Cloud</p>
+            </div>
+        </div>
+        <div class="bottom">
+            <p>yau</p>
+        </div>
     </body>
 </html>
